# wasm_to_dts

./: Cargo.toml  LICENSE  README.md  build.rs  mise.toml
.github/workflows/: build-wasm.yml  publish-release.yml  update-wasm.yml
scripts/: update-wasm-rs.ts
src/: lib.rs  wasm.rs
