[package]
name = "wasm-to-dts"
description = "Convert a WASM module to a TypeScript .d.ts file"
repository = "https://github.com/zephraph/wasm-to-dts"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
wasm_dep_analyzer = "0.2.0"
deno_ast = "0.44.0"
wasm-bindgen = "0.2"

[dev-dependencies]
pretty_assertions = "1.0.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
